# stdlib_os

./: .gitignore  CMakeLists.txt  DOC.md  LICENSE  README.md  TODO.md
.github/workflows/: CI.yml  build.yml
ci/: citest.bat  citest.sh
src/: CMakeLists.txt  internal.c  internal.f90  internal.h  internal_c.f90  os.F90  os.c  os.f90  os.name.in  os_c.f90  os_generalpath.f90  os_generalpath_c.f90  os_ntpath.f90  os_path.F90  os_path.c  os_path.f90  os_path_c.f90  os_path_posix.f90  os_path_windows.f90  os_posixpath.f90  stdlib.f90  stdlib_os.inc.in  stdlib_test.f90
src/Cygwin/: os_path_Linux.f90
src/Darwin/: os_path_Linux.f90
src/Linux/: os_path.f90  os_path_Linux.f90
src/Posix/: os_path.f90
src/Windows/: os_path.f90  os_path_Windows.f90
test/: CMakeLists.txt  stdlib_test.f90
